# BloodBowlSimulator

./: .gitignore  CMakeLists.txt  README.md  bloodbowl-2025-seed.json
data/: example_match.json  example_tournament.json  grand_tournament_32teams.json  humans_vs_orcs.json  league_16teams.json  owa_vs_dark_elves.json  owa_vs_imperial.json  owa_vs_orcs.json  snotlings_vs_chaos_dwarves.json  wood_elves_vs_nurgle.json
src/: block.hpp  dice.hpp  loader.cpp  loader.hpp  main.cpp  models.hpp  simulator.cpp  simulator.hpp  tournament.cpp  tournament.hpp
tools/: tourplay_convert.cpp  tourplay_scraper.cpp
